fix: multiple_duration_timeUnit_short Chinese translation (#16339)
* fix: multiple_duration_timeUnit_short Chinese translation

* fix: i18n

---------

Co-authored-by: Anik Dhabal Babu <81948346+anikdhabal@users.noreply.github.com>

--- a/apps/web/public/static/locales/ca/common.json
+++ b/apps/web/public/static/locales/ca/common.json
@@ -21,5 +21,10 @@
   "load_more_results": "Carrega més resultats",
   "integration_meeting_id": "{{integrationName}} Identificador de la reunió: {{meetingId}}",
   "confirmed_event_type_subject": "Confirmat: {{eventType}} amb {{name}} el {{date}}",
+  "multiple_duration_timeUnit_short": "{{count}}$t({{unit}}_short)",
+  "minute_short": "min",
+  "hour_short": "h",
+  "minute_one_short": "{{count}} min",
+  "hour_one_short": "{{count}} h"
   "signing_up_terms": "En procedir, accepteu els nostres <0>Termes</0> i <1>Política de privacitat</1>"
 }
