fix: fix some missing translation

--- a/apps/web/public/static/locales/ar/common.json
+++ b/apps/web/public/static/locales/ar/common.json
@@ -2181,5 +2181,25 @@
   "hour_short": "ساعة",
   "minute_one_short": "{{count}} دقيقة",
   "hour_one_short": "{{count}} ساعة",
+  "travel_schedule": "جدول الرحلات",
+  "travel_schedule_description": "خطط لرحلتك مقدماً للحفاظ على جدولك الحالي في منطقة زمنية مختلفة ومنع الحجز في منتصف الليل.",
+  "schedule_timezone_change": "تغيير منطقة زمنية الجدول",
+  "schedule_tz_without_end_date": "جدول منطقة زمنية بدون تاريخ انتهاء",
+  "ooo_reasons_unspecified": "غير محدد",
+  "ooo_reasons_vacation": "إجازة",
+  "ooo_reasons_travel": "رحلة",
+  "ooo_reasons_sick_leave": "إجازة مرضية",
+  "ooo_reasons_public_holiday": "عطلة رسمية",
+  "ooo_forwarding_to": "إعادة توجيه إلى {{username}}",
+  "ooo_not_forwarding": "لا يوجد إعادة توجيه",
+  "ooo_empty_title": "إنشاء حالة عدم توفر",
+  "ooo_empty_description": "تواصل مع الأشخاص الذين يريدون حجزك عندما لا تكون متاحة لاستقبال الحجوزات. يمكنهم 여لاً حجزك عند عودتك أو يمكنك إعادة توجيههم إلى عضو في الفريق.",
+  "ooo_user_is_ooo": "{{displayName}} في حالة عدم توفر",
+  "ooo_slots_returning": "<0>{{displayName}}</0> يمكنه عقد اجتماعاته أثناء غيابه.",
+  "ooo_slots_book_with": "احجز {{displayName}}",
+  "ooo_create_entry_modal": "خارج المكتب",
+  "ooo_select_reason": "اختر سبباً",
+  "enterprise_license_sales": "للترقية إلى الإصدار المؤسسي، يرجى الاتصال بفريق المبيعات. إذا كان مفتاح الترخيص موجوداً بالفعل، يرجى الاتصال بـ support@cal.com للحصول على المساعدة.",
+  "apply_to_all_event_types": "ينطبق على الكل، بما في ذلك أنواع الأحداث المستقبلية",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ أضف السلاسل الجديدة أعلاه هنا ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
