--- a/apps/web/public/static/locales/cs/common.json
+++ b/apps/web/public/static/locales/cs/common.json
@@ -2105,5 +2105,26 @@
   "hour_short": "hod",
   "minute_one_short": "{{count}} min",
   "hour_one_short": "{{count}} hod",
+  "travel_schedule": "Cestovní plán",
+  "travel_schedule_description": "Naplánujte svou cestu dopředu, abyste zachovali svůj stávající plán v jiné časové zóně a zabránili rezervaci v půlnoci.",
+  "schedule_timezone_change": "Změna časové zóny v plánu",
+  "schedule_tz_without_end_date": "Plán časové zóny bez koncového data",
+  "ooo_reasons_unspecified": "Nespecifikováno",
+  "ooo_reasons_vacation": "Dovolená",
+  "ooo_reasons_travel": "Cestování",
+  "ooo_reasons_sick_leave": "Nemocenská",
+  "ooo_reasons_public_holiday": "Státní svátek",
+  "ooo_forwarding_to": "Předávání na {{username}}",
+  "ooo_not_forwarding": "Žádné předávání",
+  "ooo_empty_title": "Vytvořit OOO",
+  "ooo_empty_description": "Komunikujte se svými rezervátory, když nejste k dispozici pro rezervace. Mohou vás stále rezervovat při vašem návratu nebo je můžete předat členovi týmu.",
+  "ooo_user_is_ooo": "{{displayName}} je OOO",
+  "ooo_slots_returning": "<0>{{displayName}}</0> může mít své schůzky, když je pryč.",
+  "ooo_slots_book_with": "Rezervovat {{displayName}}",
+  "ooo_create_entry_modal": "Jít mimo kancelář",
+  "ooo_select_reason": "Vybrat důvod",
+  "enterprise_license_locally": "Tuto funkci můžete testovat lokálně, ale ne ve výrobním prostředí.",
+  "enterprise_license_sales": "Chcete-li upgradovat na podnikovou verzi, obraťte se na náš obchodní tým. Pokud již máte licenční klíč, kontaktujte support@cal.com pro pomoc.",
+  "apply_to_all_event_types": "Aplikovat na všechny, včetně budoucích typů událostí",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Přidejte své nové řetězce nahoru ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
