--- a/apps/web/public/static/locales/es/common.json
+++ b/apps/web/public/static/locales/es/common.json
@@ -2104,5 +2104,26 @@
   "hour_short": "h",
   "minute_one_short": "{{count}} min",
   "hour_one_short": "{{count}} h",
+  "travel_schedule": "Programa de viajes",
+  "travel_schedule_description": "Planea tu viaje con anticipación para mantener tu horario existente en una zona horaria diferente y evitar ser reservado a medianoche.",
+  "schedule_timezone_change": "Cambio de zona horaria del programa",
+  "schedule_tz_without_end_date": "Programa de zona horaria sin fecha de finalización",
+  "ooo_reasons_unspecified": "No especificado",
+  "ooo_reasons_vacation": "Vacaciones",
+  "ooo_reasons_travel": "Viaje",
+  "ooo_reasons_sick_leave": "Permiso por enfermedad",
+  "ooo_reasons_public_holiday": "Día festivo",
+  "ooo_forwarding_to": "Redirigiendo a {{username}}",
+  "ooo_not_forwarding": "Sin redirección",
+  "ooo_empty_title": "Crear un OOO",
+  "ooo_empty_description": "Comunícate con tus reservadores cuando no estés disponible para tomar reservas. Aún pueden reservarte a tu regreso o puedes redirigirlos a un miembro del equipo.",
+  "ooo_user_is_ooo": "{{displayName}} está fuera de la oficina",
+  "ooo_slots_returning": "<0>{{displayName}}</0> puede tomar sus reuniones mientras está fuera.",
+  "ooo_slots_book_with": "Reservar a {{displayName}}",
+  "ooo_create_entry_modal": "Salir de la oficina",
+  "ooo_select_reason": "Seleccionar razón",
+  "enterprise_license_locally": "Puedes probar esta característica localmente pero no en producción.",
+  "enterprise_license_sales": "Para actualizar a la edición empresarial, ponte en contacto con nuestro equipo de ventas. Si ya tienes una clave de licencia, por favor contacta a support@cal.com para obtener ayuda.",
+  "apply_to_all_event_types": "Aplicar a todos, incluyendo tipos de eventos futuros",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Agregue sus nuevas cadenas arriba ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
