--- a/apps/web/public/static/locales/ko/common.json
+++ b/apps/web/public/static/locales/ko/common.json
@@ -2105,5 +2105,26 @@
   "hour_short": "시간",
   "minute_one_short": "{{count}}분",
   "hour_one_short": "{{count}}시간",
+  "travel_schedule": "여행 일정",
+  "travel_schedule_description": "다른 시간대에 있는 기존 일정을 유지하고 자정에 예약되지 않도록 여행을 미리 계획하세요.",
+  "schedule_timezone_change": "일정의 시간대 변경",
+  "schedule_tz_without_end_date": "종료 날짜가 없는 시간대의 일정",
+  "ooo_reasons_unspecified": "미지정",
+  "ooo_reasons_vacation": "휴가",
+  "ooo_reasons_travel": "여행",
+  "ooo_reasons_sick_leave": "병가",
+  "ooo_reasons_public_holiday": "공휴일",
+  "ooo_forwarding_to": "{{username}}에게 전달",
+  "ooo_not_forwarding": "전달하지 않음",
+  "ooo_empty_title": "OOO 만들기",
+  "ooo_empty_description": "예약을 받을 수 없을 때 예약자에게 알려주세요. 귀환 시에 여전히 예약받을 수 있거나 팀원에게 전달할 수 있습니다.",
+  "ooo_user_is_ooo": "{{displayName}}은 OOO 상태입니다.",
+  "ooo_slots_returning": "<0>{{displayName}}</0>은 외출 중에도 회의를 진행할 수 있습니다.",
+  "ooo_slots_book_with": "{{displayName}} 예약",
+  "ooo_create_entry_modal": "출근 외출",
+  "ooo_select_reason": "사유 선택",
+  "enterprise_license_locally": "이 기능은 로컬에서 테스트할 수 있지만 실제 운영 환경에서는 할 수 없습니다.",
+  "enterprise_license_sales": "기업용 버전으로 업그레이드하려면 영업팀에 문의하세요. 라이센스 키가 이미 있는 경우 support@cal.com에 문의하여 도움을 받으세요.",
+  "apply_to_all_event_types": "미래의 이벤트 유형을 포함하여 모든 이벤트 유형에 적용",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ 여기에 새 문자열을 추가하세요 ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
