--- a/apps/web/public/static/locales/ro/common.json
+++ b/apps/web/public/static/locales/ro/common.json
@@ -2105,5 +2105,26 @@
   "hour_short": "h",
   "minute_one_short": "{{count}} min",
   "hour_one_short": "{{count}} h",
+  "travel_schedule": "Program de călătorie",
+  "travel_schedule_description": "Planificați-vă călătoria din timp pentru a vă menține programul existent într-o altă fusă orară și a preveni rezervările la miezul nopții.",
+  "schedule_timezone_change": "Schimbare a fusului orar al programului",
+  "schedule_tz_without_end_date": "Program cu fus orar fără dată de final",
+  "ooo_reasons_unspecified": "Nespecificat",
+  "ooo_reasons_vacation": "Vacanță",
+  "ooo_reasons_travel": "Călătorie",
+  "ooo_reasons_sick_leave": "Concediu medical",
+  "ooo_reasons_public_holiday": "Sărbătoare publică",
+  "ooo_forwarding_to": "Redirecționare către {{username}}",
+  "ooo_not_forwarding": "Fără redirecționare",
+  "ooo_empty_title": "Creați un OOO",
+  "ooo_empty_description": "Comunicați-le celor care vă fac rezervări atunci când nu sunteți disponibili pentru a accepta rezervări. Ei vă pot încă rezerva la întoarcere sau puteți redirecționa rezervările către un membru al echipei.",
+  "ooo_user_is_ooo": "{{displayName}} este OOO",
+  "ooo_slots_returning": "<0>{{displayName}}</0> poate participa la întâlnirile sale în timpul absenței.",
+  "ooo_slots_book_with": "Rezervați {{displayName}}",
+  "ooo_create_entry_modal": "Ieșiți din birou",
+  "ooo_select_reason": "Selectați motivul",
+  "enterprise_license_locally": "Puteți testa această funcționalitate local, dar nu în producție.",
+  "enterprise_license_sales": "Pentru a face upgrade la ediția enterprise, contactați echipa noastră de vânzări. Dacă o cheie de licență este deja în uz, contactați support@cal.com pentru asistență.",
+  "apply_to_all_event_types": "Se aplică la toate, inclusiv la tipurile de evenimente viitoare",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Adăugați stringurile noi deasupra acestui rând ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
