--- a/apps/web/public/static/locales/tr/common.json
+++ b/apps/web/public/static/locales/tr/common.json
@@ -2105,5 +2105,26 @@
   "hour_short": "saat",
   "minute_one_short": "{{count}} dakika",
   "hour_one_short": "{{count}} saat",
+  "travel_schedule": "Seyahat Programı",
+  "travel_schedule_description": "Farklı bir saat dilimindeki mevcut programınızı korumak ve gece yarısı rezervasyon yapılmasını önlemek için seyahatinizi önceden planlayın.",
+  "schedule_timezone_change": "Program saat dilimi değişikliği",
+  "schedule_tz_without_end_date": "Sonu olmayan saat dilimi programı",
+  "ooo_reasons_unspecified": "Belirtilmemiş",
+  "ooo_reasons_vacation": "Tatil",
+  "ooo_reasons_travel": "Seyahat",
+  "ooo_reasons_sick_leave": "Hastalık izni",
+  "ooo_reasons_public_holiday": "Resmi tatil",
+  "ooo_forwarding_to": "{{username}}'ye yönlendiriliyor",
+  "ooo_not_forwarding": "Yönlendirme yok",
+  "ooo_empty_title": "OOO oluştur",
+  "ooo_empty_description": "Rezervasyon kabul edemediğinizde rezervasyon yapanlarla iletişime geçin. Döndüğünüzde yine sizi rezervasyon yaptırabilirler veya onları takım üyesine yönlendirebilirsiniz.",
+  "ooo_user_is_ooo": "{{displayName}} OOO durumunda.",
+  "ooo_slots_returning": "<0>{{displayName}}</0> yokken toplantılarına katılabilir.",
+  "ooo_slots_book_with": "{{displayName}}'yi rezervasyon yap",
+  "ooo_create_entry_modal": "Ofisten çık",
+  "ooo_select_reason": "Sebep seçin",
+  "enterprise_license_locally": "Bu özelliği yerel olarak test edebilirsiniz ama üretim ortamında değil.",
+  "enterprise_license_sales": "Kurumsal sürüme yükseltmek için satış ekibimize ulaşın. Lisans anahtarı zaten varsa support@cal.com adresine başvurun.",
+  "apply_to_all_event_types": "Tüm etkinlik türlerine uygula, gelecekteki etkinlik türleri de dahil.",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Yeni dizelerinizi yukarıya ekleyin ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
