--- a/apps/web/public/static/locales/vi/common.json
+++ b/apps/web/public/static/locales/vi/common.json
@@ -2113,5 +2113,26 @@
   "minute_one_short": "{{count}} phút",
   "hour_one_short": "{{count}} giờ",
   "signing_up_terms": "Bằng cách tiếp tục, bạn đồng ý với <0>Điều khoản sử dụng</0> và <1>Chính sách bảo mật</1> của chúng tôi",
+  "travel_schedule": "Lịch trình du lịch",
+  "travel_schedule_description": "Lập kế hoạch chuyến đi của bạn trước để giữ lịch trình hiện tại của bạn ở múi giờ khác và tránh bị đặt chỗ vào nửa đêm.",
+  "schedule_timezone_change": "Thay đổi múi giờ lịch trình",
+  "schedule_tz_without_end_date": "Lịch trình múi giờ không có ngày kết thúc",
+  "ooo_reasons_unspecified": "Không xác định",
+  "ooo_reasons_vacation": "Kỳ nghỉ",
+  "ooo_reasons_travel": "Du lịch",
+  "ooo_reasons_sick_leave": "Nghỉ ốm",
+  "ooo_reasons_public_holiday": "Ngày lễ công cộng",
+  "ooo_forwarding_to": "Chuyển tiếp đến {{username}}",
+  "ooo_not_forwarding": "Không chuyển tiếp",
+  "ooo_empty_title": "Tạo một OOO",
+  "ooo_empty_description": "Thông báo cho người đặt chỗ của bạn khi bạn không thể nhận đặt chỗ. Họ vẫn có thể đặt chỗ cho bạn khi bạn trở lại hoặc bạn có thể chuyển tiếp họ đến thành viên trong đội.",
+  "ooo_user_is_ooo": "{{displayName}} đang là OOO",
+  "ooo_slots_returning": "<0>{{displayName}}</0> có thể tham dự cuộc họp của họ khi họ đang vắng mặt.",
+  "ooo_slots_book_with": "Đặt chỗ với {{displayName}}",
+  "ooo_create_entry_modal": "Ra khỏi văn phòng",
+  "ooo_select_reason": "Chọn lý do",
+  "enterprise_license_locally": "Bạn có thể thử tính năng này tại địa phương nhưng không phải trên môi trường sản xuất.",
+  "enterprise_license_sales": "Để nâng cấp lên phiên bản doanh nghiệp, vui lòng liên hệ với đội ngũ bán hàng của chúng tôi. Nếu khóa giấy phép đã có sẵn, vui lòng liên hệ support@cal.com để được hỗ trợ.",
+  "apply_to_all_event_types": "Áp dụng cho tất cả, bao gồm cả các loại sự kiện trong tương lai",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
