--- a/apps/web/public/static/locales/zh-TW/common.json
+++ b/apps/web/public/static/locales/zh-TW/common.json
@@ -2116,5 +2116,26 @@
   "privacy": "隱私權",
   "team_will_be_under_org": "新的團隊將會在您的組織下。",
   "signing_up_terms": "继续使用，即表示您同意我们的<0>使用条款</0>和<1>隐私政策</1>",
+  "travel_schedule": "旅行日程表",
+  "travel_schedule_description": "提前規劃您的旅行，以在不同時區保持您現有的日程安排，並防止在午夜被預訂。",
+  "schedule_timezone_change": "日程時區變更",
+  "schedule_tz_without_end_date": "沒有結束日期的日程時區",
+  "ooo_reasons_unspecified": "未指定",
+  "ooo_reasons_vacation": "度假",
+  "ooo_reasons_travel": "旅行",
+  "ooo_reasons_sick_leave": "病假",
+  "ooo_reasons_public_holiday": "公眾假期",
+  "ooo_forwarding_to": " 轉發給{{username}}",
+  "ooo_not_forwarding": "不轉發",
+  "ooo_empty_title": "創建 OOO",
+  "ooo_empty_description": "當您無法接受預訂時，請與您的預訂者溝通。他們可以在您回來時仍然預訂您，或者您可以將他們轉發給團隊成員。",
+  "ooo_user_is_ooo": "{{displayName}} 處於 OOO 狀態",
+  "ooo_slots_returning": "<0>{{displayName}}</0> 在離開期間可以參加他們的會議。",
+  "ooo_slots_book_with": "預訂 {{displayName}}",
+  "ooo_create_entry_modal": "離開辦公室",
+  "ooo_select_reason": "選擇原因",
+  "enterprise_license_locally": "您可以在本地測試此功能，但不能在生產環境中使用。",
+  "enterprise_license_sales": " 要升級到企業版，請聯繫我們的銷售團隊。如果許可證密鑰已經到位，請聯繫 support@cal.com 尋求幫助。",
+  "apply_to_all_event_types": "適用於所有類型，包括未來的事件類型",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ 請在此處新增您的字串 ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
