--- a/apps/web/public/static/locales/he/common.json
+++ b/apps/web/public/static/locales/he/common.json
@@ -2424,5 +2424,9 @@
   "hour_short": "שעות",
   "minute_one_short": "{{count}} דקות",
   "hour_one_short": "{{count}} שעות",
+  "ooo_reasons_unspecified": "לא ידוע",
+  "ooo_empty_description": "תקשר אל המזמינים שלך כשאתה לא זמין לקבל הזמנות. הם יכולים עדיין להזמין אותך בעת החזרה שלך או שתוכל להעביר אותם לחבר בצוות.",
+  "ooo_slots_returning": "<0>{{displayName}}</0> יכול לקחת את המפגשים שלו בזמן שהוא לא נמצא.",
+  "apply_to_all_event_types": "החל על כל, כולל סוגים של אירועים עתידיים",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
