--- a/apps/web/public/static/locales/no/common.json
+++ b/apps/web/public/static/locales/no/common.json
@@ -1398,5 +1398,26 @@
   "minute_short": "min",
   "hour_short": "t",
   "minute_one_short": "{{count}} min",
-  "hour_one_short": "{{count}} t"
+  "hour_one_short": "{{count}} t",
+  "travel_schedule": "Reiseskjema",
+  "travel_schedule_description": "Planlegg reisen din på forhånd for å beholde din eksisterende skjema i en annen tidssone og forhindre å bli booket midnattstid.",
+  "schedule_timezone_change": "Endring av tidssone i skjemaet",
+  "schedule_tz_without_end_date": "Skjema med tidssone uten sluttdato",
+  "ooo_reasons_unspecified": "Uspesifisert",
+  "ooo_reasons_vacation": "Ferie",
+  "ooo_reasons_travel": "Reise",
+  "ooo_reasons_sick_leave": "Sykefravær",
+  "ooo_reasons_public_holiday": "Offentlig helligdag",
+  "ooo_forwarding_to": "Videresendes til {{username}}",
+  "ooo_not_forwarding": "Ingen videresending",
+  "ooo_empty_title": "Opprett en OOO",
+  "ooo_empty_description": "Kommuniser med dine bookere når du ikke er tilgjengelig for booking. De kan fortsatt booke deg ved din tilbakekomst eller du kan videresende dem til et teammedlem.",
+  "ooo_user_is_ooo": "{{displayName}} er OOO",
+  "ooo_slots_returning": "<0>{{displayName}}</0> kan ta sine møter mens de er borte.",
+  "ooo_slots_book_with": "Book {{displayName}}",
+  "ooo_create_entry_modal": "Gå utenfor kontoret",
+  "ooo_select_reason": "Velg grunn",
+  "enterprise_license_locally": "Du kan teste denne funksjonen lokalt, men ikke i produksjon.",
+  "enterprise_license_sales": "For å oppgradere til enterprise-utgaven, ta kontakt med vårt salgsteam. Hvis en lisensnøkkel allerede er på plass, ta kontakt med support@cal.com for hjelp.",
+  "apply_to_all_event_types": "Gjelder for alle, inkludert fremtidige eventtyper"
 }
