--- a/apps/web/public/static/locales/sv/common.json
+++ b/apps/web/public/static/locales/sv/common.json
@@ -2105,5 +2105,26 @@
   "hour_short": "t",
   "minute_one_short": "{{count}} min",
   "hour_one_short": "{{count}} t",
+  "travel_schedule": "Reseplan",
+  "travel_schedule_description": "Planera din resa i förväg för att behålla din befintliga schemaläggning i en annan tidszon och förhindra att bli bokad vid midnatt.",
+  "schedule_timezone_change": "Schemaläggnings tidszonsskift",
+  "schedule_tz_without_end_date": "Schemaläggning med tidszon utan slutdatum",
+  "ooo_reasons_unspecified": "Ospecificerad",
+  "ooo_reasons_vacation": "Semester",
+  "ooo_reasons_travel": "Resa",
+  "ooo_reasons_sick_leave": "Sjukskrivning",
+  "ooo_reasons_public_holiday": "Offentlig helgdag",
+  "ooo_forwarding_to": "Vidarebefordrar till {{username}}",
+  "ooo_not_forwarding": "Ingen vidarebefordran",
+  "ooo_empty_title": "Skapa en OOO",
+  "ooo_empty_description": "Kommunikera med dina bokningsansvariga när du inte är tillgänglig för bokningar. De kan fortfarande boka dig vid din återkomst eller du kan vidarebefordra dem till en teammedlem.",
+  "ooo_user_is_ooo": "{{displayName}} är OOO",
+  "ooo_slots_returning": "<0>{{displayName}}</0> kan delta i sina möten medan de är borta.",
+  "ooo_slots_book_with": "Boka {{displayName}}",
+  "ooo_create_entry_modal": "Gå ut ur kontoret",
+  "ooo_select_reason": "Välj anledning",
+  "enterprise_license_locally": "Du kan testa denna funktion lokalt men inte i produktion.",
+  "enterprise_license_sales": "För att uppgradera till företagsversionen, kontakta vårt säljteam. Om en licensnyckel redan är på plats, kontakta support@cal.com för hjälp.",
+  "apply_to_all_event_types": "Gäller för alla, inklusive framtida eventtyper",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
