--- a/apps/web/public/static/locales/uk/common.json
+++ b/apps/web/public/static/locales/uk/common.json
@@ -2138,5 +2138,26 @@
   "hour_short": "годин",
   "minute_one_short": "{{count}} хвилин",
   "hour_one_short": "{{count}} годин",
+  "travel_schedule": "Розклад подорожей",
+  "travel_schedule_description": "Плануйте свою подорож заздалегідь, щоб зберегти свій існуючий розклад в іншій часовій зоні та запобігти бронюванню о півночі.",
+  "schedule_timezone_change": "Зміна часового поясу розкладу",
+  "schedule_tz_without_end_date": "Розклад часового поясу без кінцевої дати",
+  "ooo_reasons_unspecified": "Не вказано",
+  "ooo_reasons_vacation": "Відпустка",
+  "ooo_reasons_travel": "Подорож",
+  "ooo_reasons_sick_leave": "Більничний",
+  "ooo_reasons_public_holiday": "Публічний святковий день",
+  "ooo_forwarding_to": "Перенаправлення на {{username}}",
+  "ooo_not_forwarding": "Немає перенаправлення",
+  "ooo_empty_title": "Створити OOO",
+  "ooo_empty_description": "Спілкуйтеся зі своїми замовниками, коли ви не можете приймати бронювання. Вони все одно можуть забронювати вас при вашому поверненні або ви можете перенаправити їх до члена команди.",
+  "ooo_user_is_ooo": "{{displayName}} є OOO",
+  "ooo_slots_returning": "<0>{{displayName}}</0> може брати участь у своїх зустрічах під час відсутності.",
+  "ooo_slots_book_with": "Забронювати {{displayName}}",
+  "ooo_create_entry_modal": "Вийти з офісу",
+  "ooo_select_reason": "Виберіть причину",
+  "enterprise_license_locally": "Ви можете тестувати цю функцію локально, але не в виробництві.",
+  "enterprise_license_sales": "Щоб оновити до корпоративної версії, зверніться до нашої команди продажу. Якщо ліцензійний ключ вже є, зверніться до support@cal.com за допомогою.",
+  "apply_to_all_event_types": "Застосовується до всіх, включаючи майбутні типи подій",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
