--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1743,6 +1743,9 @@
   "meeting_url_variable": "Meeting url",
   "meeting_url_info": "The event meeting conference url",
   "date_overrides": "Date overrides",
+  "time_blocks": "Time Blocks",
+  "time_blocks_subtitle": "Mark yourself available when you have a calendar event with a title that contains",
+  "add_time_block": "Add a Time Block",
   "date_overrides_delete_on_date": "Delete date overrides on {{date}}",
   "date_overrides_subtitle": "Add dates when your availability changes from your daily hours.",
   "date_overrides_info": "Date overrides are archived automatically after the date has passed",
