--- a/apps/web/public/static/locales/pt-BR/common.json
+++ b/apps/web/public/static/locales/pt-BR/common.json
@@ -2395,7 +2395,7 @@
   "create_account_password_hint": "Você não tem uma senha de conta, crie uma em Securança -> Senha. Não é possível disconectar até uma senha de conta ser criada.",
   "disconnect_account": "Disconecte contas conectadas",
   "disconnect_account_hint": "Disconectar sua conta conectada mudará a maneira como você faz login. Você só poderá fazer login usando e-mail + senha",
-  "cookie_consent_checkbox": "Eu concordo com a política de privacidade e uso de cookies",
+  "cookie_consent_checkbox": "Eu concordo com a política de privacidade e uso de cookies deste site",
   "make_a_call": "Fazer uma Ligação",
   "ooo_reasons_unspecified": "Não especificado",
   "ooo_reasons_vacation": "Férias",
