--- a/apps/web/public/static/locales/de/common.json
+++ b/apps/web/public/static/locales/de/common.json
@@ -2405,7 +2405,7 @@
   "create_account_password_hint": "Sie haben kein Konto-Passwort. Erstellen Sie eines, indem Sie zu Sicherheit -> Passwort navigieren. Die Verbindung kann nicht getrennt werden, bis ein Konto-Passwort erstellt wurde.",
   "disconnect_account": "Verbundenes Konto trennen",
   "disconnect_account_hint": "Das Trennen Ihres verbundenen Kontos ändert die Art und Weise, wie Sie sich anmelden. Sie können sich nur mit E-Mail + Passwort bei Ihrem Konto anmelden",
-  "cookie_consent_checkbox": "Ich stimme den Datenschutzrichtlinien und der Verwendung von Cookies auf dieser Webseite zu",
+  "cookie_consent_checkbox": "Durch die Erstellung eines Kontos stimmen Sie unserer Datenschutzerklärung und der Verwendung von Cookies zu",
   "make_a_call": "Anruf tätigen",
   "skip_rr_assignment_label": "Round-Robin-Zuweisung überspringen, wenn der Kontakt in Salesforce existiert",
   "skip_rr_description": "URL muss die E-Mail des Kontakts als Parameter enthalten, z. B. ?email=contactEmail",
