--- a/apps/web/public/static/locales/es/common.json
+++ b/apps/web/public/static/locales/es/common.json
@@ -2098,7 +2098,7 @@
   "email_team_invite|heading|invited_to_regular_team": "Lo han invitado a unirse a un equipo en {{appName}}",
   "email_team_invite|content|invited_to_regular_team": "{{invitedBy}} lo ha invitado a unirse a su equipo \"{{teamName}}\" en {{appName}}. {{appName}} es el planificador de eventos que le permite a usted y a su equipo programar reuniones sin correos electrónicos de ida y vuelta.",
   "privacy": "Privacidad",
-  "cookie_consent_checkbox": "Acepto la política de privacidad y el uso de cookies de este sitio web",
+  "cookie_consent_checkbox": "Al crear una cuenta, aceptas nuestra política de privacidad y el uso de cookies",
   "signing_up_terms": "Al continuar, acepta nuestras <0>condiciones de uso</0> y nuestra <1>política de privacidad</1>.",
   "multiple_duration_timeUnit_short": "{{count}}$t({{unit}}_short)",
   "minute_short": "min",
