--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2526,6 +2526,7 @@
   "team_select_info": "triggers for all team event types and all team members' personal event types",
   "no_show_updated": "No-show status updated for attendees",
   "email_copied": "Email copied",
+  "phone_number_copied": "Phone Number Copied",
   "USER_PENDING_MEMBER_OF_THE_ORG": "User is a pending member of the organization",
   "USER_ALREADY_INVITED_OR_MEMBER": "User is already invited or a member",
   "USER_MEMBER_OF_OTHER_ORGANIZATION": "User is member of an organization that this team is not a part of.",
