--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -468,7 +468,7 @@
   "browser_notifications_turned_off": "Browser Notifications turned off",
   "browser_notifications_denied": "Browser Notifications denied",
   "please_allow_notifications": "Please allow notifications from the prompt",
-  "browser_notifications_not_supported": "Your browser does not support Push Notifications",
+  "browser_notifications_not_supported": "Your browser does not support Push Notifications. If you are Brave user then enable `Use Google services for push messaging` Option on brave://settings/?search=push+messaging",
   "email": "Email",
   "email_placeholder": "jdoe@example.com",
   "full_name": "Full name",
