--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1135,6 +1135,7 @@
   "set_location": "Set Location",
   "update_location": "Update Location",
   "location_updated": "Location updated",
+  "location_update_failed": "Location update failed",
   "guests_added": "Guests added",
   "unable_to_add_guests": "Unable to add guests",
   "email_validation_error": "That doesn't look like an email address",
