translations for stripe connect atom

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2569,6 +2569,9 @@
   "outlook_connect_atom_label": "Connect Outlook Calendar",
   "outlook_connect_atom_already_connected_label": "Connected Outlook Calendar",
   "outlook_connect_atom_loading_label": "Checking Outlook Calendar",
+  "stripe_connect_atom_label": "Connect to Stripe",
+  "stripe_connect_atom_already_connected_label": "Connected Stripe",
+  "stripe_connect_atom_loading_label": "Checking Stripe credentials",
   "booking_question_response_variables": "Booking question response variables",
   "managed_by_teamAdmins": "Managed by {{teamAdmins}}",
   "number_of_options":"{{count}} options",
